@@ -1,6 +1,6 @@
 ## Interface: 20504
 ## Title: BugGrabber
-## Version: v10.2.1
+## Version: v10.2.2
 ## Notes: Grabs bugs for the bug sack.
 ## Notes-deDE: Grabs bugs for the bug sack.
 ## Notes-ruRU: Grabs bugs for the bug sack.
