@@ -1,7 +1,13 @@
 ------------------------------------------------------------------------
-r298 | funkehdude | 2023-11-16 01:02:42 +0000 (Thu, 16 Nov 2023) | 1 line
+r301 | funkehdude | 2024-01-16 18:20:42 +0000 (Tue, 16 Jan 2024) | 1 line
 Changed paths:
-   M /trunk/!BugGrabber_Vanilla.toc
+   M /trunk/BugGrabber.lua
+
+Compat code for C_AddOns API
+------------------------------------------------------------------------
+r300 | funkehdude | 2024-01-16 18:11:18 +0000 (Tue, 16 Jan 2024) | 1 line
+Changed paths:
+   M /trunk/!BugGrabber.toc
 
 bump toc
 ------------------------------------------------------------------------
